--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a id="header-title"href="index.html"><strong>Salg.no</strong></a>
         <ul id="header-nav">
           <li><a href="about.html">About</a></li>
-          <li><a href=mailto:ardian.memo88@gmail.com">Contact</a></li>
+          <li><a href=mailto:>Contact</a></li>
         </ul>
       </div></div>
       <div id="content">
@@ -56,9 +56,9 @@
         <div class="column">
           <h4>Mine Lenker</h4>
           <p>
-            <a href="https://instagram.com/ardi_km">Instagram</a>
+            <a href="https://instagram.com/">Instagram</a>
           <br>
-        <a href="https://facebook.com/ardian.kelmendi">Facebook</a>
+        <a href="https://facebook.com/">Facebook</a>
       </p>
         </div>
         <div class="column">
