--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         <a id="header-title"href="index.html"><strong>Salg.no</strong></a>
         <ul id="header-nav">
           <li><a href="about.html">About</a></li>
-          <li><a href=mailto:ardian.memo88@gmail.com">Contact</a></li>
+          <li><a href=mailto:">Contact</a></li>
         </ul>
       </div></div>
     <div id="content">
